Fix SVG overlap for 650-850
Adds a media query for medium screen size to reduce margin and prevent overlap

--- a/_sass/_fypmedia.scss
+++ b/_sass/_fypmedia.scss
@@ -1,4 +1,7 @@
 @media only screen and (max-width: 850px) {
+  .svg-stripe {
+    margin-top: -150px;
+  }
   .categories-container {
     .categories-card {
       flex-direction: column;
